--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
 
 	<properties>
 		<java.version>13</java.version>
+		<sonar.projectKey>Qaozer_SafetyNet</sonar.projectKey>
+		<sonar.organization>qaozer</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.login>8c1fa73d008c5ccb877b462a22b8b5a1b332cb65</sonar.login>
 	</properties>
 
 	<dependencies>
@@ -67,6 +71,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.17</version>
 		</dependency>
 	</dependencies>
 
